# pixopera

./: LICENSE  README.md  pyproject.toml
pixopera/: main.py
pixopera/services/: colors.py  math.py
